Fix navigation on tablet and below screens

--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -8,7 +8,7 @@ $browser-frame-button-yellow: rgb(251 191 36 / 100%);
 $browser-frame-button-green: rgb(52 211 153 / 100%);
 
 $breakpoint-mobile-lower: 320px;
-$breakpoint-mobile-upper: 480px;
+$breakpoint-mobile-upper: 670px;
 
 $breakpoint-tablet-lower: 481px;
 $breakpoint-tablet-upper: 768px;
