--- a/src/scss/modules/_nav.scss
+++ b/src/scss/modules/_nav.scss
@@ -12,7 +12,7 @@
 	}
 
 	.logo-container {
-		padding: 4.5rem 8rem;
+		padding: 1.5rem 8rem;
 		letter-spacing: 0.5px;
 		@include mixins.mobile {
 			display: none;
@@ -20,7 +20,7 @@
 	}
 
 	.nav {
-		padding: 4.5rem 8rem;
+		padding: 1.5rem 8rem;
 		@include mixins.mobile {
 			padding: 4.5rem 0;
 		}
@@ -34,7 +34,7 @@
 				margin-left: 3rem;
 				@include mixins.mobile {
 					margin-left: 1.8rem;
-					font-size: 1.8rem;
+					font-size: clamp(2rem, 4vw, 3rem);
 				}
 			}
 
